--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@ Sample Website
 <head>
 This is an awesome Website
 </head>
+<p>
+W3.CSS is a modern, responsive, mobile first CSS framework.
+
+W3.CSS provides equality for all browsers: Chrome. Firefox. Edge. IE. Safari. Opera.
+
+W3.CSS provides equality for all devices: Desktop. Laptop. Tablet. Mobile.
+
+W3.CSS is standard CSS only (No jQuery or JavaScript library).
+</p>
 </html>
 
