I Added Hi Ananth

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ Sample Website
 This is an awesome Website
 </head>
 <p>
+Hi Ananth..
 W3.CSS is a modern, responsive, mobile first CSS framework.
 
 W3.CSS provides equality for all browsers: Chrome. Firefox. Edge. IE. Safari. Opera.
